# fem_olds

./: .gitignore  README.mdd  naca_boundary_layer_3d.py  package-lock.json  package.json  prompt  pyproject.toml
ai/: ai.py  co.py  ep.py
docs/assistant/gmsh/: gmsh.txt
docs/assistant/gmsh/ch1/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
docs/assistant/mmdc/: temp.mmd
docs/assistant/static/: gmsh.css:Zone.Identifier  gui.png:Zone.Identifier  gui_add_rectangle.png:Zone.Identifier  gui_mesh.png:Zone.Identifier  t1.png:Zone.Identifier  t10.png:Zone.Identifier  t11.png:Zone.Identifier  t12.png:Zone.Identifier  t13.png:Zone.Identifier  t14.png:Zone.Identifier  t15.png:Zone.Identifier  t16.png:Zone.Identifier  t17.png:Zone.Identifier  t18.png:Zone.Identifier  t19.png:Zone.Identifier  t2.png:Zone.Identifier  t20.png:Zone.Identifier  t21.png:Zone.Identifier  t3.png:Zone.Identifier  t4.png:Zone.Identifier  t5.png:Zone.Identifier  t6.png:Zone.Identifier  t7.png:Zone.Identifier  t8.png:Zone.Identifier  t9.png:Zone.Identifier  x2.png:Zone.Identifier  x3.png:Zone.Identifier  x4.png:Zone.Identifier  x5.png:Zone.Identifier  x7.png:Zone.Identifier
docs/mmdc/: input.mmd
docs/source/: conf.py  index.rst  overview.md
src/fem/: main.py  simu.py  simulation.py
src/fem/calc/: calc.py  calc_matrix.py  set_element.py
src/fem/model/: __init__.py  geo.py  model.py  wing_model.py
