[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fem"
authors = [
    {name = "sakakibara yuuki", email = "sakakilabo0000@gmail.com"},
]
description = "This is my dream"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Gmesh",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "gmsh",
    "matplotlib",
    "beautifulsoup4",
    "deepl",
    "flake8",
    "black",
    "isort",
    "openai",
    "langchain",
    "chromadb",
    "tiktoken",
    "sentence_transformers",
    "google-search-results",
    "unstructured",
]

dynamic = ["version"]

# [project.optional-dependencies]
# dev = [
# ]
# [tool.setuptools_scm]
# write_to = 'src/fem/version.py'


# [tool.setuptools.dynamic]
# version = {attr = 'fem.version.__version__'}
